--- a/Automate the Boring stuff/Download WikiMedia categories.ipynb
+++ b/Automate the Boring stuff/Download WikiMedia categories.ipynb
@@ -2,50 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'D:\\\\Downloads'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import os\n",
-    "os.getcwd()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "os.chdir('D:/Downloads')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the full url of wikipedia category: http://cdn.spsdarj.org/index.php/Main_Page\n",
-      "Enter The folder name inside which to download: cdn\n",
-      "Downloading page http://cdn.spsdarj.org/index.php/Main_Page...\n",
-      "Could not find any images.\n",
+      "Enter the full url of wikipedia category: https://commons.wikimedia.org/wiki/Karnataka_Waterfalls\n",
+      "Enter The folder name inside which to download: india\n",
+      "Downloading page https://commons.wikimedia.org/wiki/Karnataka_Waterfalls ...\n",
+      "Downloading image Gokak 1.jpg...\n",
+      "Downloading image Gokak 3.jpg...\n",
       "Done. \n",
       "\n",
-      "Pics were downloaded to: D:\\Downloads\\cdn\n"
+      "Pics were downloaded to: D:\\Downloads\\india\n"
      ]
     }
    ],
@@ -79,53 +62,70 @@
     "url = dirname = ''\n",
     "errorCount = 0\n",
     "\n",
-    "while url == '' or not url.startswith('https://commons.wikimedia.org/wiki/Category:'):\n",
+    "while url == '' or not url.startswith('https://commons.wikimedia.org/wiki/'):\n",
     "    # https://commons.wikimedia.org/wiki/Category:St._Paul%27s_School,_Darjeeling\n",
+    "    # https://commons.wikimedia.org/wiki/Commons:Picture_of_the_Year\n",
     "    url = input('Enter the full url of wikipedia category: ') # starting url\n",
+    "\n",
     "while dirname =='':\n",
     "    dirname = input('Enter The folder name inside which to download: ')\n",
     "os.makedirs(dirname, exist_ok=True)   # store comics in ./dirname\n",
     "\n",
     "# Download the page.\n",
-    "print('Downloading page %s...' % url)\n",
+    "print('Downloading page %s ...' % url)\n",
     "res = requests.get(url, headers=headers)\n",
     "res.raise_for_status()\n",
     "\n",
     "soup = bs4.BeautifulSoup(res.text, 'html.parser')\n",
     "\n",
-    "# TODO: Find the URL of the comic image.\n",
-    "picElem = soup.select('li > div > div.gallerytext > a')\n",
+    "if url.startswith('https://commons.wikimedia.org/wiki/Category:'):\n",
+    "    picElem = soup.select('li > div > div.gallerytext > a')\n",
+    "else:\n",
+    "    # assume url.startswith('https://commons.wikimedia.org/wiki/'):\n",
+    "    picElem = soup.select('div.thumb > div > a')\n",
+    "\n",
     "if picElem == []:\n",
     "     print('Could not find any images.')\n",
     "else:\n",
     "    for url in picElem:\n",
-    "        picTitle = url.contents[0]\n",
     "        picURL= 'https://commons.wikimedia.org/' + url.get('href')\n",
     "        \n",
     "        try: \n",
     "            res2 = requests.get(picURL, headers=headers)\n",
     "            res2.raise_for_status()\n",
     "            soup2 = bs4.BeautifulSoup(res2.text, 'html.parser')\n",
-    "\n",
+    "            \n",
+    "            # get id 'first heading', it returns a list, take 0th index, extract contents, remove 'File:' string\n",
+    "            picTitle = soup2.select('#firstHeading')[0].contents[0][5:]\n",
+    "            \n",
+    "            # get url of original file\n",
     "            originalFile=soup2.select('#mw-content-text > div.fullMedia > p > a')[0].get('href')\n",
+    "            \n",
     "            if originalFile == []:\n",
     "                print('Could not find any images.')\n",
     "            else:\n",
-    "                try:\n",
-    "                    # Download the image.\n",
-    "                    print('Downloading image %s...' % (picTitle))\n",
-    "                    res = requests.get(originalFile)\n",
-    "                    res.raise_for_status()\n",
-    "                except requests.exceptions.MissingSchema:\n",
-    "                    # start the next iteration of the loop\n",
-    "                    errorCount+=1\n",
+    "                if os.path.isfile(os.path.join(dirname,picTitle)):\n",
+    "                    # file already exists\n",
+    "                    print(f'{picTitle} already exists in {dirname}')\n",
     "                    continue\n",
-    "                \n",
-    "                #Save the image to ./spsdarj\n",
-    "                imageFile = open(os.path.join(dirname, picTitle), 'wb')\n",
-    "                for chunk in res.iter_content(100000):\n",
-    "                    imageFile.write(chunk)\n",
-    "                imageFile.close()\n",
+    "                else:\n",
+    "                    #download the file\n",
+    "                    try:\n",
+    "                        # Download the image.\n",
+    "                        print('Downloading image %s...' % (picTitle))\n",
+    "                        res = requests.get(originalFile)\n",
+    "                        res.raise_for_status()\n",
+    "                    except requests.exceptions.MissingSchema:\n",
+    "                        # start the next iteration of the loop\n",
+    "                        errorCount+=1\n",
+    "                        continue\n",
+    "\n",
+    "                    #Save the image to ./dirname\n",
+    "                    imageFile = open(os.path.join(dirname, picTitle), 'wb')\n",
+    "                    for chunk in res.iter_content(100000):\n",
+    "                        imageFile.write(chunk)\n",
+    "                    imageFile.close()\n",
+    "                    \n",
     "        except requests.exceptions.HTTPError as err:\n",
     "            print(err)\n",
     "            errorCount+=1\n",
