--- a/Library Docs/os module/OS.ipynb
+++ b/Library Docs/os module/OS.ipynb
@@ -175,7 +175,7 @@
     "os.rmdir('hi') # Recommended use case\n",
     "os.removedirs('hola/nice')  \n",
     "os.removedirs('new\\\\interesting\\\\haha') \n",
-    "# Removes intermediate directories alos, but only \n",
+    "# Removes intermediate directories also, but only \n",
     "# if it became empty after deleting the subfolder\n",
     "os.listdir()"
    ]
@@ -712,6 +712,50 @@
     "# returns (‘/tmp/test’, ‘.txt’)\n",
     "# This is alot easier than parsing out the extension. Splitting off and taking the first value is much better.\n",
     "# Very useful for file manipulation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Moving Files is done by renaming "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.mkdir('hi')\n",
+    "os.rename('test.txt','hi/test.txt')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Printing out a full path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\abhin\\\\Desktop\\\\GitHub\\\\Python\\\\Library Docs\\\\os module\\\\hi'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.join(os.getcwd(), 'hi')"
    ]
   }
  ],
