--- a/Notes/Jupyter Magic.ipynb
+++ b/Notes/Jupyter Magic.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating a file using Jupyter notebook's magic"
+    "# Creating a file using Jupyter notebook's magic\n",
+    "The magic needs to be the first line"
    ]
   },
   {
@@ -204,14 +205,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "python: can't open file 'qikgoogle.py': [Errno 2] No such file or directory\n"
+      "Googling...\n"
      ]
     }
    ],
@@ -225,13 +226,6 @@
    "source": [
     "`! qikgoogle.py yahoo` ends up opening the file in editor (default execution of the file.. basically double clicking it)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
