--- a/Notes/String Formatting.ipynb
+++ b/Notes/String Formatting.ipynb
@@ -7,7 +7,9 @@
     "# String Formatting\n",
     "https://stackoverflow.com/a/50340297/2365231\n",
     "\n",
-    "https://docs.python.org/3/library/string.html#format-specification-mini-language"
+    "https://docs.python.org/3/library/string.html#format-specification-mini-language\n",
+    "\n",
+    "[How do I create a multiline Python string with inline variables?](https://stackoverflow.com/a/10112665/2365231)"
    ]
   },
   {
@@ -103,6 +105,73 @@
    "source": [
     "import math\n",
     "math.cos(3.4)**2+math.sin(3.4)**2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Multi line print"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Hi there.\n",
+      "This is a multi\n",
+      "line\n",
+      "print\n",
+      "==========\n",
+      "|        |\n",
+      "|        |\n",
+      "|   BOX  |\n",
+      "|        |\n",
+      "|        |\n",
+      "==========\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('''\n",
+    "Hi there.\n",
+    "This is a multi\n",
+    "line\n",
+    "print\n",
+    "==========\n",
+    "|        |\n",
+    "|        |\n",
+    "|   BOX  |\n",
+    "|        |\n",
+    "|        |\n",
+    "==========\n",
+    "''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, this is some text with more text and more.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hi, this is some text \"\n",
+    "     \"with more text \"\n",
+    "     \"and more.\")"
    ]
   },
   {
