move working codes to web scraping library

--- a/Libraries/web scraping/Amazon Flipkart Price finder (requests,bs4).ipynb
+++ b/Libraries/web scraping/Amazon Flipkart Price finder (requests,bs4).ipynb
@@ -9,8 +9,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the Amazon/Flipkart url: https://www.amazon.in/MSI-GP63-8RE-442IN-15-6-inch-i7-8750H/dp/B07BQ1LP8T/ref=sr_1_4/258-7000067-9363351?s=computers&ie=UTF8&qid=1552768189&sr=1-4&keywords=gtx+1080+laptop\n",
-      "MSI Gaming MSI GP63 8RE-442IN 2018 15.6-inch Laptop (8th Gen Core i7-8750H/16GB/1TB/256GB SSD/Windows 10/6GB Graphics), Black costs Rs. 129,500.00\n"
+      "Enter the Amazon/Flipkart url: http://dl.flipkart.com/dl/honor-9n-sapphire-blue-64-gb/p/itmf9pgsehv6nmss\n",
+      "Honor 9N (Sapphire Blue, 32 GB)  (3 GB RAM) costs Rs. ₹8,499\n"
      ]
     }
    ],
