--- a/Libraries/web scraping/Download CBSE Results (selenium).ipynb
+++ b/Libraries/web scraping/Download CBSE Results (selenium).ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get cbse results for a series of roll numbers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -347,7 +354,6 @@
    ],
    "source": [
     "import os\n",
-    "# Get cbse results for a roll number\n",
     "from selenium import webdriver\n",
     "browser = webdriver.Chrome(executable_path=os.path.join(os.getcwd(),'webdriver','chromedriver.exe'))\n",
     "browser.get('http://resultsarchives.nic.in/cbseresults/cbseresults2013/class12/cbse122013.htm')\n",
