--- a/Libraries/web scraping/Download R & J (requests).ipynb
+++ b/Libraries/web scraping/Download R & J (requests).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -10,10 +10,9 @@
      "output_type": "stream",
      "text": [
       "Status code: 200\n",
-      "\n",
       "Length: 178978\n",
       "\n",
-      "First 500 bytes: \n",
+      "First 572 bytes: \n",
       "The Project Gutenberg EBook of Romeo and Juliet, by William Shakespeare\r\n",
       "\r\n",
       "This eBook is for the use of anyone anywhere at no cost and with\r\n",
@@ -29,10 +28,11 @@
       "Posting Date: May 25, 2012 [EBook #1112]\r\n",
       "Release Date: November, 1997  [Etext #1112]\r\n",
       "\r\n",
-      "Language: Eng\n",
-      "\n",
+      "Language: English\r\n",
+      "\r\n",
+      "\r\n",
+      "*** START OF THIS PROJECT GUTENBERG EBOOK ROMEO AND JULIET ***\n",
       "Raise for status: None\n",
-      "\n",
       "Done.\n"
      ]
     }
@@ -43,10 +43,10 @@
     "\n",
     "res = requests.get('https://automatetheboringstuff.com/files/rj.txt')\n",
     "\n",
-    "print('Status code: '+str(res.status_code)+'\\n')\n",
-    "print('Length: '+str(len(res.text))+'\\n')\n",
-    "print('First 500 bytes: \\n'+res.text[:500]+'\\n')\n",
-    "print('Raise for status: '+str(res.raise_for_status())+'\\n')\n",
+    "print('Status code: '+str(res.status_code))\n",
+    "print('Length: '+str(len(res.text)))\n",
+    "print('\\nFirst 572 bytes: \\n'+res.text[:572])\n",
+    "print('Raise for status: '+str(res.raise_for_status()))\n",
     "\n",
     "playFile = open('romeo and juliet.txt','wb') #write binary\n",
     "for chunk in res.iter_content(100000): # asks bytes of data to iterate over\n",
