--- a/Libraries/web scraping/Quick Google (requests, webbrowser, bs4).ipynb
+++ b/Libraries/web scraping/Quick Google (requests, webbrowser, bs4).ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing quick_google.py\n"
+      "Overwriting quick_google.py\n"
      ]
     }
    ],
@@ -17,9 +17,9 @@
     "%%writefile quick_google.py\n",
     "#! python3\n",
     "# http://automatetheboringstuff.com/chapter11/\n",
-    "# qikgoogle.py - Opens several Google search results.\n",
+    "# quick_google.py - Opens several Google search results.\n",
     "\n",
-    "import requests, sys, webbrowser, bs4\n",
+    "import sys, requests, webbrowser, bs4\n",
     "\n",
     "print('Googling...') # display text while downloading the Google page\n",
     "res = requests.get('http://google.com/search?q=' + ' '.join(sys.argv[1:]))\n",
@@ -28,10 +28,10 @@
     "# Retrieve top search result links.\n",
     "soup = bs4.BeautifulSoup(res.text, 'html.parser')\n",
     "\n",
-    "# Open a browser tab for each result.\n",
+    "# Identify all results.\n",
     "linkElems = soup.select('.r a')\n",
     "\n",
-    "# TODO: Open a browser tab for each result.\n",
+    "# Open a browser tab for top 5 results\n",
     "numOpen = min(5, len(linkElems))\n",
     "for i in range(numOpen):\n",
     "    webbrowser.open('http://google.com' + linkElems[i].get('href'))"
