--- a/Libraries/web scraping/Amazon Flipkart Price finder (requests,bs4).ipynb
+++ b/Libraries/web scraping/Amazon Flipkart Price finder (requests,bs4).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -36,6 +36,7 @@
     "    return price\n",
     "\n",
     "def getAmazonPrice(soup):\n",
+    "    # soup is a bs4.BeautifulSoup object\n",
     "    # only select based on css selector.\n",
     "    # \"select\" creates a list with all values matching the selector\n",
     "    # containing the desired selector\n",
@@ -58,13 +59,6 @@
     "price = allocator(url)\n",
     "print(price.get('name', 'Undefined')+' costs Rs. '+price.get('price','Undefined'))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
