add json library info

--- a/Notes/Files.ipynb
+++ b/Notes/Files.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create a file with some text"
+    "# Create a file with some text\n",
+    "`open(filepath,\"w\",encoding=\"utf-8\")`: encoding is needed when there is non-ASCII character in file"
    ]
   },
   {
