--- a/xMisc/decipher 4chandl.py.ipynb
+++ b/xMisc/decipher 4chandl.py.ipynb
@@ -2,18 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name '__file__' is not defined",
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "usage: ipykernel_launcher.py [-h] [-c] [-d] [-l] [-n] [-r] thread\n",
+      "ipykernel_launcher.py: error: unrecognized arguments: -f\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "2",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-9c79e2abd2c5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mlog\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlogging\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetLogger\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'inb4404'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[0mworkpath\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdirname\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrealpath\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m__file__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m \u001b[0margs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name '__file__' is not defined"
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\abhin\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3275: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -71,6 +85,19 @@
     "    while True:\n",
     "        try:\n",
     "            regex = '(\\/\\/i(?:s|)\\d*\\.(?:4cdn|4chan)\\.org\\/\\w+\\/(\\d+\\.(?:jpg|png|gif|webm)))'\n",
+    "            '''\n",
+    "            Eg: http://is2.4chan.org/gif/1559559046386.webm\n",
+    "            (\n",
+    "            \\/\\/i                   # start from the double slashes //\n",
+    "            (?:s|)                  # non capturing group (?:), s|null so either there be 's' or nothing\n",
+    "            \\d*\\.                   # zero to unlimited digits then a dot (now subdomain name is complete)\n",
+    "            (?:4cdn|4chan)\\.        # non capturing group, for the domain name then a dot\n",
+    "            org                     # TLD of domain\n",
+    "            \\/\\w+\\/                 # literal slash then one or more words defining the 4chan board\n",
+    "            (\\d+\\.                  # 1 or more numbers indicating filename\n",
+    "            (?:jpg|png|gif|webm))   # non capturing group, to choose between any of these strings\n",
+    "            )\n",
+    "            '''\n",
     "            regex_result = list(set(re.findall(regex, load(thread_link).decode('utf-8'))))\n",
     "            regex_result = sorted(regex_result, key=lambda tup: tup[1])\n",
     "            regex_result_len = len(regex_result)            \n",
@@ -159,9 +186,15 @@
     "    try:\n",
     "        main()\n",
     "    except KeyboardInterrupt:\n",
-    "        pass\n",
-    "\n"
+    "        pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
