--- a/Notes (self)/String Formatting.ipynb
+++ b/Notes (self)/String Formatting.ipynb
@@ -88,22 +88,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello hi you are invited to bye at time: 6pm\n"
+      "hello Abhinav you are invited to Sunburn at time: 6pm\n"
      ]
     }
    ],
    "source": [
-    "name =\"hi\"\n",
-    "place=\"bye\"\n",
+    "name =\"Abhinav\"\n",
+    "place=\"Sunburn\"\n",
     "time = \"6pm\"\n",
     "print('hello %s you are invited to %s at time: %s' % (name, place, time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello Abhinav you are invited to Sunburn at time: 6pm\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'hello {name} you are invited to {place} at time: {time}')"
    ]
   },
   {
@@ -246,6 +263,194 @@
    "source": [
     "print (\">>> \")\n",
     "print('more text')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bytes vs Strings:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'ABCD'\n",
+      "This is string.\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = bytes([0x41, 0x42, 0x43, 0x44])\n",
+    "print(b)\n",
+    "s = \"This is string.\"\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"bytes\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-9c3249b2294d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ms\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"bytes\") to str"
+     ]
+    }
+   ],
+   "source": [
+    "s+b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This is string.ABCD'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s_b = b.decode('utf-8')\n",
+    "s+s_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'ABCDThis is string.'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b_s = s.encode('utf-8')\n",
+    "b+b_s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'\\xff\\xfe\\x00\\x00T\\x00\\x00\\x00h\\x00\\x00\\x00i\\x00\\x00\\x00s\\x00\\x00\\x00 \\x00\\x00\\x00i\\x00\\x00\\x00s\\x00\\x00\\x00 \\x00\\x00\\x00s\\x00\\x00\\x00t\\x00\\x00\\x00r\\x00\\x00\\x00i\\x00\\x00\\x00n\\x00\\x00\\x00g\\x00\\x00\\x00.\\x00\\x00\\x00'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b32 = s.encode('utf-32')\n",
+    "b32"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Template string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Avatar by James Cameron\n"
+     ]
+    }
+   ],
+   "source": [
+    "from string import Template\n",
+    "templ = Template(\"${title} by ${director}\")\n",
+    "value = templ.substitute(title=\"Avatar\", director=\"James Cameron\")\n",
+    "print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Titanic by James Cameraman\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = {\n",
+    "    \"title\" : \"Titanic\",\n",
+    "    \"director\" : \"James Cameraman\"\n",
+    "}\n",
+    "value2 = templ.substitute(data)\n",
+    "print(value2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Default input value\n",
+    "`raw_input` doesn't exist in python 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the inputs : \n",
+      "42\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input = int(input(\"Enter the inputs : \") or \"42\")\n",
+    "print(user_input)"
    ]
   },
   {
