classes and ciphers

--- a/Notes (self)/List.ipynb
+++ b/Notes (self)/List.ipynb
@@ -264,51 +264,126 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Misc"
+    "# List Copying\n",
+    "All variable names point to the same location of the list in memory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "[0, 1, 'hello', 3, 4, 5]\n"
+     ]
     }
    ],
    "source": [
     "aList = [0, 1, 2, 3, 4, 5]\n",
     "bList = aList\n",
+    "\n",
+    "# print(\"aList:\", id(aList))\n",
+    "# print(\"bList:\", id(bList))\n",
+    "print(aList == bList and aList is bList) # True\n",
+    "\n",
     "aList[2] = 'hello'\n",
-    "aList == bList and aList is bList"
+    "print(bList)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
     }
    ],
    "source": [
-    "cList=[0, 1, 'hello', 3, 4, 5]\n",
-    "aList is cList"
+    "cList = [0, 1, 'hello', 3, 4, 5]\n",
+    "print(aList is cList)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2224569371848\n",
+      "2224569406920\n"
+     ]
+    }
+   ],
+   "source": [
+    "# copying list by slicing\n",
+    "bList = aList[:]\n",
+    "\n",
+    "print(id(aList))\n",
+    "print(id(bList))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2224569371848\n",
+      "2224569407496\n"
+     ]
+    }
+   ],
+   "source": [
+    "# copying list by list()\n",
+    "bList = list(aList)\n",
+    "\n",
+    "print(id(aList))\n",
+    "print(id(bList))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2224569370440\n",
+      "2224569406920\n"
+     ]
+    }
+   ],
+   "source": [
+    "# copying list by .copy()\n",
+    "# copying list by list()\n",
+    "aList = aList.copy()\n",
+    "\n",
+    "print(id(aList))\n",
+    "print(id(bList))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Misc"
    ]
   },
   {
