--- a/Notes (self)/OOPS/__init__ in classes.ipynb
+++ b/Notes (self)/OOPS/__init__ in classes.ipynb
@@ -1,59 +1,66 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "class Dog():\n",
-    "    # class object attribute\n",
-    "    # same for any instance of class\n",
-    "    species = 'mammal'\n",
-    "    \n",
-    "    def __init__(self,breed,name,spots):\n",
-    "        self.breed = breed\n",
-    "        self.name=name\n",
-    "        # expect a boolean\n",
-    "        self.spots=spots\n",
-    "    \n",
-    "    def bark(self,number):\n",
-    "        print('Woof!, my name is {} and number is {}'.format(self.name, number))\n",
-    "        print(f'Woof!, my name is {self.name} and number is {number}')"
+    "### Class for dog"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mydog = Dog(breed='lab',name='sammy',spots=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Woof!, my name is sammy and number is 2\n",
       "Woof!, my name is sammy and number is 2\n"
      ]
     }
    ],
    "source": [
+    "class Dog():\n",
+    "    # class variable\n",
+    "    # same for any instance of class\n",
+    "    species = 'mammal' # don't define lists here cuz one object can change the list of another object\n",
+    "    \n",
+    "    def __init__(self,breed,name,spots):\n",
+    "        self.breed = breed\n",
+    "        self.name=name\n",
+    "        self.spots=spots\n",
+    "    \n",
+    "    def bark(self,number):\n",
+    "        print(f'Woof!, my name is {self.name} and number is {number}')\n",
+    "\n",
+    "mydog = Dog(breed='lab',name='sammy',spots=True)\n",
     "mydog.bark(2)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Class for circle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.14\n",
+      "30\n",
+      "188.4\n",
+      "2826.0\n"
+     ]
+    }
+   ],
    "source": [
     "class Circle():\n",
     "    # class object attribute\n",
@@ -67,101 +74,26 @@
     "        self.area = radius*radius*Circle.pi\n",
     "    \n",
     "    def get_circumference(self):\n",
-    "        return self.radius*self.pi*2"
+    "        return self.radius*self.pi*2\n",
+    "\n",
+    "myCircle = Circle(30)\n",
+    "print(myCircle.pi)\n",
+    "print(myCircle.radius)\n",
+    "print(myCircle.get_circumference())\n",
+    "print(myCircle.area)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "myCircle = Circle(30)"
+    "# Inheritance\n",
+    "When we call a function, python checks in the subclass if that function exists, if not, then it checks parent class."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.14"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "myCircle.pi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "30"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "myCircle.radius"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "188.4"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "myCircle.get_circumference()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2826.0"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "myCircle.area"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,41 +111,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Dog(Animal):\n",
+    "    # python checks __init__ of dog. If not found, it checks __init__ of Animal\n",
+    "    # here, we create our own __init__ so __init__ of Animal will not be run\n",
     "    def __init__(self,name):\n",
-    "        # all methods of Animal() come via the inheritance\n",
-    "        # We still have to execute the Animal.__init__ after all\n",
-    "        # as that's what hapens when a class is instantiated anyway\n",
+    "        # therefore, calling __init__ of Animal cuz we need it \n",
+    "        # actually we can call any function that will define self.name = name\n",
     "        Animal.__init__(self,name)\n",
     "        print('Dog created')\n",
     "    \n",
-    "    # overwriting methods of animal class\n",
+    "    # overriding methods of animal class\n",
     "    def who_am_i(self):\n",
+    "        # Animal.who_am_i(self)\n",
     "        print('I am a dog')\n",
     "    \n",
     "    # adding new methods to this class\n",
     "    def bark(self):\n",
-    "        print('Woof!, said {}'.format(self.name))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        print(f'Woof!, said {self.name}')\n",
+    "\n",
     "class Cat(Animal):\n",
+    "    # if we don't override __init__, then Animal's __init__ is called automatically\n",
     "    def speak(self):\n",
-    "        return self.name+ ' says Meow!'"
+    "        print(f'Meow!, said {self.name}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +158,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'annie'"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myanimal.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am an animal\n"
+     ]
+    }
+   ],
+   "source": [
+    "myanimal.who_am_i()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -243,12 +208,12 @@
     }
    ],
    "source": [
-    "sammy = Dog('fido')"
+    "doggie = Dog('fido')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -260,12 +225,12 @@
     }
    ],
    "source": [
-    "sammy.who_am_i()"
+    "doggie.who_am_i()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -277,12 +242,12 @@
     }
    ],
    "source": [
-    "sammy.bark()"
+    "doggie.bark()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -299,20 +264,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 94,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'issac says Meow!'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Meow!, said issac\n"
+     ]
     }
    ],
    "source": [
@@ -321,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
