--- a/Notes (self)/String Formatting.ipynb
+++ b/Notes (self)/String Formatting.ipynb
@@ -88,13 +88,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "hello Abhinav you are invited to Sunburn at time: 6pm\n",
+      "hello Abhinav you are invited to Sunburn at time: 6pm\n",
       "hello Abhinav you are invited to Sunburn at time: 6pm\n"
      ]
     }
@@ -103,23 +105,8 @@
     "name =\"Abhinav\"\n",
     "place=\"Sunburn\"\n",
     "time = \"6pm\"\n",
-    "print('hello %s you are invited to %s at time: %s' % (name, place, time))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello Abhinav you are invited to Sunburn at time: 6pm\n"
-     ]
-    }
-   ],
-   "source": [
+    "print('hello %s you are invited to %s at time: %s' % (name, place, time))\n",
+    "print('hello {} you are invited to {} at time: {}'.format(name, place, time))\n",
     "print(f'hello {name} you are invited to {place} at time: {time}')"
    ]
   },
