--- a/xMisc/Ciphers/Ciphers- Caesar Cipher.ipynb
+++ b/xMisc/Ciphers/Ciphers- Caesar Cipher.ipynb
@@ -1,29 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter message: \n",
-      ".daed era meht fo owt fi ,terces a peek nac eerhT\n"
-     ]
-    }
-   ],
    "source": [
-    "message = input('Enter message: ') or 'Three can keep a secret, if two of them are dead.'\n",
-    "translated = ''\n",
+    "Use this regex to get rid of numbering at start of code `^\\s*\\d*.\\s?`\n",
     "\n",
-    "i = len(message) - 1\n",
-    "while i >= 0:\n",
-    "    translated = translated + message[i]\n",
-    "    i = i - 1\n",
-    "    \n",
-    "print(translated)"
+    "https://inventwithpython.com/cracking/chapter5.html"
    ]
   },
   {
@@ -93,7 +76,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -229,74 +214,6 @@
     "    # Display every possible decryption:\n",
     "    print('Key #%s: %s' % (key, translated))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cenoonommstmme oo snnio. s s c|\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Transposition Cipher Encryption\n",
-    "# https://www.nostarch.com/crackingcodes/ (BSD Licensed)\n",
-    "\n",
-    "import pyperclip\n",
-    "\n",
-    "def main():\n",
-    "    myMessage = 'Common sense is not so common.'\n",
-    "    myKey = 8\n",
-    "\n",
-    "    ciphertext = encryptMessage(myKey, myMessage)\n",
-    "\n",
-    "    # Print the encrypted string in ciphertext to the screen, with\n",
-    "    # a | (\"pipe\" character) after it in case there are spaces at\n",
-    "    # the end of the encrypted message:\n",
-    "    print(ciphertext + '|')\n",
-    "\n",
-    "    # Copy the encrypted string in ciphertext to the clipboard:\n",
-    "    pyperclip.copy(ciphertext)\n",
-    "\n",
-    "\n",
-    "def encryptMessage(key, message):\n",
-    "    # Each string in ciphertext represents a column in the grid:\n",
-    "    ciphertext = [''] * key\n",
-    "\n",
-    "    # Loop through each column in ciphertext:\n",
-    "    for column in range(key):\n",
-    "        currentIndex = column\n",
-    "\n",
-    "        # Keep looping until currentIndex goes past the message length:\n",
-    "        while currentIndex < len(message):\n",
-    "            # Place the character at currentIndex in message at the\n",
-    "            # end of the current column in the ciphertext list:\n",
-    "            ciphertext[column] += message[currentIndex]\n",
-    "\n",
-    "            # Move currentIndex over:\n",
-    "            currentIndex += key\n",
-    "\n",
-    "    # Convert the ciphertext list into a single string value and return it:\n",
-    "    return ''.join(ciphertext)\n",
-    "\n",
-    "\n",
-    "# If transpositionEncrypt.py is run (instead of imported as a module) call\n",
-    "# the main() function:\n",
-    "if __name__ == '__main__':\n",
-    "    main()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
