--- a/Notes (self)/Quirks of Python.ipynb
+++ b/Notes (self)/Quirks of Python.ipynb
@@ -195,6 +195,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Everything in python is an object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "3\n",
+      "ab\n",
+      "ab\n",
+      "4\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1+2)\n",
+    "# is same as\n",
+    "print(int.__add__(1,2))\n",
+    "\n",
+    "print('a'+'b')\n",
+    "# is same as\n",
+    "print(str.__add__('a','b'))\n",
+    "\n",
+    "print(len('test'))\n",
+    "# is same as \n",
+    "print(str.__len__('test'))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
