Update 461. Hamming Distance [easy].ipynb

--- a/Questions/Leetcode/461. Hamming Distance [easy].ipynb
+++ b/Questions/Leetcode/461. Hamming Distance [easy].ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Padding (ljust, rjust): https://stackoverflow.com/a/45120812/2365231\n",
     "\n",
-    "## learn about itwise operations with good examples: \n",
+    "## learn about bitwise operations with good examples: \n",
     "https://www.hackerearth.com/practice/basic-programming/bit-manipulation/basics-of-bit-manipulation/tutorial/"
    ]
   },
